--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "@storybook/addon-actions": "^5.2.4",
     "@storybook/addon-links": "^5.2.4",
     "@storybook/addons": "^5.2.4",
-    "@storybook/react": "^5.2.4",
-    "typescript": "3.3.3"
+    "@storybook/react": "^5.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
